# snowflake_workshop_clik

./: README.md
00_setup/: 00_setup.sql
01_data_generation/: generate_data.py
01_data_generation/data/: dim_lender.csv  dim_product.csv  dim_region.csv  loan_applications.csv
02_data_load/: 01_create_tables.sql  02_generate_subject_features.sql  03_load_from_git.sql
03_ml_notebook/: 01_end_to_end_ml_pd.ipynb
04_model_deployment/: 04a_batch_scoring.sql  04b_call_realtime.py  04b_call_realtime_hybrid.py  04b_call_realtime_notebook.py  04b_call_realtime_notebook_rest.py  04b_deploy_service.py  04b_notebook_rest_setup.sql  04b_realtime_hybrid_rest.ipynb  04b_realtime_spcs.sql  04b_realtime_view_rest.ipynb  04c_hybrid_table_benchmark.py  04c_hybrid_table_feature_lookup.sql
05_streamlit_dashboard/: clik_dashboard.py  environment.yml  pyproject.toml
06_coco_prompting/: prompting_guide.md
07_cortex_agent/: 01_semantic_view.sql  02_create_agent.sql  README.md
08_aibidashboard/: 01_datamart.sql  02_build_guide.md  02_tile_queries.sql
