[project]
name = "clik_dashboard"
version = "0.1.0"
description = "CLIK Workshop 2 credit risk dashboard (Streamlit in Snowflake, Workspaces)"
requires-python = ">=3.11"
# Dependencies untuk Streamlit in Snowflake in Workspaces (container runtime).
# streamlit & snowflake-snowpark-python sudah disediakan runtime, tapi aman
# dicantumkan. plotly WAJIB ditambahkan (tidak ada secara default).
dependencies = [
    "streamlit",
    "snowflake-snowpark-python",
    "plotly",
    "pandas",
    "numpy",
]
